--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"scripts": {
 		"start": "node main.js",
+		"downloadTestData": "node downloadTestData.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
