--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "main.js",
 	"dependencies": {
 		"apify": "^0.12.0",
-		"jimp": "^0.6.0",
 		"request-promise": "^4.2.4",
+		"sharp": "^0.22.0",
 		"tesseract.js": "^1.0.14"
 	},
 	"devDependencies": {
